# PROJECT_triple_sigma

./: .gitignore  AGENTS.md  CLAUDE.md  STEP21_CLOSEOUT_AND_VERIFICATION.md  STEP21_PROMOTION_AND_DEFERRED_SCOPE.md
.claude/: settings.local.json
TRIPLE-SIGMA/: CONTRACT.md  EA_RUNTIME.md  ONNX_DEV_SPEC.md  POLICY_FREEZE.md  README.md
_coord/: BACKTEST_BASELINE.md  CHAT.md  CHAT_02.md  GPT_PRO_AUDIT_REPORT_2026-03-11.md  GPT_PRO_AUDIT_REPORT_2026-03-12.md  GPT_PRO_REVIEW_PROMPT_KR.md  GPT_PRO_REVIEW_PROMPT_PHASE_ABBplus.md  README.md
design/: BAR_LOG_SCHEMA.md  STEP01_Document_Governance.md  STEP02_OnNewBar_Data_Ingest.md  STEP03_Indicators_Pipeline.md  STEP04_Features_and_XTensor.md  STEP05_Regime_and_Thresholds.md  STEP06_Candidate_Policy.md  STEP07_ModelPack_and_ORT.md  STEP08_Inference_Assembly_and_Flip.md  STEP09_Gates.md  STEP10_Execution_Position_Logs.md  STEP11_Labeling_ActionSearch.md  STEP12_Stage1_Training.md  STEP13_Stage2_Training.md  STEP14_Validation_and_Tuning.md  STEP15_ONNX_Export_and_Packaging.md  STEP16_Runtime_Optimization_and_Monitoring.md  STEP17_Minimal_Live_Early_Exit.md  STEP18_Execution_Observability_Hardening.md  STEP19_CloseOnly_Opposite_Early_Exit_And_Ops_Closeout.md  STEP20_Bounded_BE_Modify.md  STEP21_Deferred_Runtime_Surface.md  STEP21_Tx_Authoritative_Protective_Runtime.md  US100_RealTick_Backtest_Data_Policy.md
src/ml/: pyproject.toml  step11_labeling.py  step12_training.py  step13_training.py  step14_training.py  step15_training.py
src/ml/triplesigma_ml/: __init__.py  step11.py  step12.py  step13.py  step14.py  step15.py
(+3983 files in other folders)
